# raylib_playground

./: CMakeLists.txt  README.md
cmake/: catch2.cmake
src/: CMakeLists.txt  fourier.cpp  main.cpp  testing_grounds.cpp
src/canvas/: CMakeLists.txt  canvas.hpp  color.hpp
src/color/: CMakeLists.txt  color.cpp  color.hpp
src/math/: CMakeLists.txt
src/math/geom/: bezier.cpp  bezier.hpp  matrix.hpp  polar.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp
src/math/tests/: CMakeLists.txt
src/math/tests/test_geom/: test_vec2.cpp
src/raylibpp/: CMakeLists.txt  raylib_utils.cpp  raylib_utils.hpp  raylibpp.cpp  raylibpp.hpp
src/raylibpp_runner/: CMakeLists.txt  runner.cpp  runner.hpp
src/sketch/: CMakeLists.txt  sketch.cpp  sketch.hpp
src/sketches/: CMakeLists.txt  testing_grounds.cpp
src/sketches/fourier/: CMakeLists.txt  dft_epicycles.cpp  dft_epicycles.hpp  dft_impl.cpp  dft_impl.hpp  epicycles.cpp  epicycles.hpp  fourier.cpp  fourier2d.cpp  train.cpp  train.hpp
src/sketches/raytracer/: CMakeLists.txt  raytracer.cpp
src/test_common/: CMakeLists.txt
src/utility/: CMakeLists.txt  move.cpp  move.hpp
